@@ -15,6 +15,7 @@ common:
 	* Provided an error message when the arch is not supported.(Refs 
 	  issue #19 on github)
 	* Fixed issue #23. Fixed a bug of f_check script about generating link flags.
+	* Added openblas_set_num_threads for Fortran.
 
 x86/x86_64:
 	* 
